--- a/configExample.json
+++ b/configExample.json
@@ -1,3 +1,6 @@
+
 {
-    "discordToken":"insertBotToken",
-    "COOCKIEYT":"insert coockie NETSCAPE FORMAT"}
+	"DISCORDBOTTOKEN": "Insert Token Discord Bot",
+
+	"COOCKIEFORYOUTUBE": "Insert coockie NETSCAPE FORMAT with authenticated Youtube account"
+}
