--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./dist/src/index.js",
   "scripts": {
-    "start": "tsc && node ./dist/src/index.js"
+    "start": "npx tsc && node ./dist/src/index.js",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
     "sodium": "^3.0.2",
     "ytdl-core": "^4.11.5",
     "ytdl-core-discord": "^1.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5"
   }
 }
