--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,8 +105,8 @@
 		// "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
 
 		/* Completeness */
-		"skipDefaultLibCheck": false /* Skip type checking .d.ts files that are included with TypeScript. */,
-		"skipLibCheck": false /* Skip type checking all .d.ts files. */
+		"skipDefaultLibCheck": true /* Skip type checking .d.ts files that are included with TypeScript. */,
+		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
 	"include": ["src/**/*", "tests/**/*"],
 	"exclude": ["node_modules", "./src/**/*.spec.ts"]
